--- a/_config.yml
+++ b/_config.yml
@@ -103,14 +103,13 @@ content:
   - title: A Little More About Me
     layout: text
     content: | # this will include new lines to allow paragraphs
-      Alongside my interests in networks and software engineering some of my other interests and hobbies are:
-      - Rock climbing
+      Alongside my interests in software engineering some of my other interests and hobbies are:
+      - Cricket
       - Gaming
-      - Knitting
-      - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
+      #- [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
 
-      Look at this cool image  
-      ![Trees](/images/landscape-trees.jpg "Trees")
+      #Look at this cool image  
+      #![Trees](/images/landscape-trees.jpg "Trees")
 
 # Footer
 footer_show_references: true
