--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ email: hur.info@gmail.com
 website: www.github.com/geminiperseus
 
 # Dark Mode (true/false/never)
-darkmode: true
+darkmode: false
 
 # Social links
 twitter_username: https://www.linkedin.com/in/geminiperseus
@@ -90,9 +90,9 @@ content:
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        title: Harvard University
-        caption: 2010 - 2013
-        sub_title: BSc Computer Science
+        title: UCP
+        caption: 2001 - 2004
+        sub_title: MSc Computer Science
         quote: >
           Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
         description: | # this will include new lines to allow paragraphs
@@ -106,13 +106,13 @@ content:
       Alongside my interests in software engineering some of my other interests and hobbies are:
       - Cricket
       - Gaming
-      #- [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
+      - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
 
-      #Look at this cool image  
-      #![Trees](/images/landscape-trees.jpg "Trees")
+      Look at this cool image  
+      ![Trees](/images/landscape-trees.jpg "Trees")
 
 # Footer
-footer_show_references: true
+footer_show_references: false
 # references_title: References on request (Override references text)
 
 # Build settings
