--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ content:
         title: UCP
         caption: 2001 - 2004
         sub_title: MSc Computer Science
-        quote: >
+        quote: > "A child without education is like a bird without wings."
           
         description: | # this will include new lines to allow paragraphs
           During my time at UCP I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
