--- a/_config.yml
+++ b/_config.yml
@@ -76,15 +76,15 @@ content:
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        title: The Boring Company
-        link: boringcompany.com
-        # link_text: boringcompany.com
-        sub_title: Senior Network System Administrator
-        caption: November 2017 - Present
+        title: TIAA Cref.
+        link: tiaa.org
+        #  link_text: tiaa.org
+        sub_title: Senior Solutions Architect
+        caption: September 2016 - Present
         quote: >
-          Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+          Big Data
         description: | # this will include new lines to allow paragraphs
-            Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+            Fee Calc Engine:
 
   - title: Education # Title for the section
     layout: list # Type of content section (list/text)
@@ -93,8 +93,8 @@ content:
         title: UCP
         caption: 2001 - 2004
         sub_title: MSc Computer Science
-        quote: > "A child without education is like a bird without wings."
-          
+        quote: > 
+          A child without education is like a bird without wings.          
         description: | # this will include new lines to allow paragraphs
           During my time at UCP I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
 
