--- a/_config.yml
+++ b/_config.yml
@@ -76,8 +76,19 @@ content:
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        title: TIAA Cref.
-        link: tiaa.org
+        title: TIAA Cref
+        link: www.tiaa.org
+        #  link_text: tiaa.org
+        sub_title: Senior Solutions Architect
+        caption: September 2016 - Present
+        quote: >
+          Big Data
+        description: | # this will include new lines to allow paragraphs
+            Fee Calc Engine:
+    content:
+      - layout: right
+        title: Capital One
+        link: www.capitalone.com
         #  link_text: tiaa.org
         sub_title: Senior Solutions Architect
         caption: September 2016 - Present
