--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ content:
           I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
 
   - title: Experience # Title for the section
-    layout: list # Type of content section (list/text)
+    layout: text # Type of content section (list/text)
     content:
       - layout: left
         title: TIAA Cref
@@ -85,7 +85,7 @@ content:
           Big Data
         description: | # this will include new lines to allow paragraphs
             Fee Calc Engine:
-    content:
+   
       - layout: right
         title: Capital One
         link: www.capitalone.com
