--- a/_config.yml
+++ b/_config.yml
@@ -85,10 +85,8 @@ content:
           Big Data
         description: | # this will include new lines to allow paragraphs
             Fee Calc Engine:
-  - title: # Title for the section
-    layout: list # Type of content section (list/text)
     content:
-      - layout: left
+      - layout: right
         title: Capital One
         link: www.capitalone.org
         #  link_text: tiaa.org
