--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ content:
         quote: >
           Big Data
         description: | # this will include new lines to allow paragraphs
-            Fee Calc Engine:
+            I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
 
   - title: Education # Title for the section
     layout: list # Type of content section (list/text)
