--- a/_config.yml
+++ b/_config.yml
@@ -172,6 +172,9 @@ content:
 footer_show_references: false
 # references_title: References on request (Override references text
 
+# Build settings
+remote_theme: geminiperseus/resume
+
 sass:
   sass_dir: _sass
   style: compressed
