--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ content:
           Big Data
         description: | # this will include new lines to allow paragraphs
             I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
-      - layout: right
+      - layout: left
         title: Capital One
         link: www.capitalone.org
         #  link_text: tiaa.org
@@ -105,7 +105,7 @@ content:
           Big Data
         description: | # this will include new lines to allow paragraphs
             I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
-      - layout: right
+      - layout: left
         title: Express Scripts
         link: www.express-scripts.com
         #  link_text: tiaa.org
@@ -125,7 +125,7 @@ content:
           Big Data
         description: | # this will include new lines to allow paragraphs
             I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
-      - layout: right
+      - layout: left
         title: Jackson National Life Insurance
         link: www.jackson.com
         #  link_text: tiaa.org
