--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,9 @@ content:
         sub_title: Senior Solutions Architect
         caption: September 2016 - Present
         description: | # this will include new lines to allow paragraphs
-            I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
+          <mark>GOFOLIO</mark> Gofolio is the tool used by investment managers to create portfolios for clients. There are multiple options available to pick from such as equity, stocks etc.
+          <mark>SFV Designer</mark> SFV Designer is used by operations to create new services and features that are available in multiple other areas for investment managers to choose from.
+          <mark>Fee Calculation Engine</mark> Fee Calculation Engine is used to calculate fees for clients on their 401k services.
       - layout: left
         title: Capital One
         link: www.capitalone.org
