--- a/_config.yml
+++ b/_config.yml
@@ -88,8 +88,8 @@ content:
           - Build business rules using Rule Book.
           - Wrote REST services to fetch data from Oracle database.
           - Used Log4j for logging and debugging.
-          - Used J unit for writing test cases for the classes.<br /> <br />
-          <mark>Environment:</mark> JIRA, Angular2, Free maker, PL/SQL Developer, AWS, Eclipse 3.4, Gitlab, Spring 3.0, jQuery, Jenkins, JUnit, Log4J, ATDD, Apache Camel, Cucumber, Selenium, Sonar, Java8
+          - Used J unit for writing test cases for the classes.<br />
+          <mark>Environment</mark> JIRA, Angular2, Free maker, PL/SQL Developer, AWS, Eclipse 3.4, Gitlab, Spring 3.0, jQuery, Jenkins, JUnit, Log4J, ATDD, Apache Camel, Cucumber, Selenium, Sonar, Java8
       - layout: left
         title: Capital One
         link: www.capitalone.org
@@ -119,8 +119,8 @@ content:
           - Implemented ATDD in our regular sprint work.
           - Build an automation framework from scratch for Sassy application.
           - Used Cucumber Selenium and Java to create the automation framework.
-          - Worked with teams to implement Hystrix in our APIs to make APIs more stable.<br /> <br />
-          Environment: Version 1, JIRA, Velocity, PL/SQL Developer, Eclipse 3.4, SVN, Spring 3.0, JBPM, AngularJS, jQuery, Jersey, Junit, AEM 6.0, Log4J, ATDD, Cucumber, Selenium, Hystrix
+          - Worked with teams to implement Hystrix in our APIs to make APIs more stable.<br />
+          <mark>Environment<mark> Version 1, JIRA, Velocity, PL/SQL Developer, Eclipse 3.4, SVN, Spring 3.0, JBPM, AngularJS, jQuery, Jersey, Junit, AEM 6.0, Log4J, ATDD, Cucumber, Selenium, Hystrix
       - layout: left
         title: State of Maryland
         link: www.courts.state.md.us
